[gd_scene load_steps=3 format=3 uid="uid://cbbg41qwr72kg"]

[ext_resource type="Script" path="res://Game/Scripts/Values/values.gd" id="1_k5arm"]
[ext_resource type="PackedScene" uid="uid://co4g81q551wxj" path="res://Game/Scenes/Values/value.tscn" id="1_r6ueo"]

[node name="Values" type="Node"]
script = ExtResource("1_k5arm")

[node name="SilverCoinsEarnRate" parent="." instance=ExtResource("1_r6ueo")]

[node name="DivineCoinsEarnRate" parent="." instance=ExtResource("1_r6ueo")]

[node name="MineSpeed" parent="." instance=ExtResource("1_r6ueo")]

[node name="MineQuantity" parent="." instance=ExtResource("1_r6ueo")]

[node name="TransportSpeed" parent="." instance=ExtResource("1_r6ueo")]

[node name="TransportQuantity" parent="." instance=ExtResource("1_r6ueo")]

[node name="ClickValue" parent="." instance=ExtResource("1_r6ueo")]

[node name="ErosionValue" parent="." instance=ExtResource("1_r6ueo")]

[node name="StoneSellValue" parent="." instance=ExtResource("1_r6ueo")]

[node name="Protection" parent="." instance=ExtResource("1_r6ueo")]
base_value = 0.0
multiplier_value = 0.0
