extends Node

@onready var mine_speed = $MineSpeed
@onready var mine_quantity = $MineQuantity
@onready var transport_speed = $TransportSpeed
@onready var transport_quantity = $TransportQuantity
@onready var click_value = $ClickValue
@onready var erosion_value = $ErosionValue
@onready var stone_sell_value = $StoneSellValue
@onready var protection = $Protection
